force-app/main/default/objects/Notification__c/fields/BelongsTo__c.field-meta.xml
<CustomField>
    <fullName>BelongsTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BelongsTo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>