force-app/main/default/objects/Notification__c/fields/DropableBody__c.field-meta.xml
<CustomField>
    <fullName>DropableBody__c</fullName>
    <label>DropableBody</label>
    <type>TextArea</type>
</CustomField>