force-app/main/default/objects/Notification__c/fields/History_Detail__c.field-meta.xml
<CustomField>
    <fullName>History_Detail__c</fullName>
    <label>History Detail</label>
    <type>TextArea</type>
</CustomField>