force-app/main/default/objects/Notification__c/fields/IsDeletable__c.field-meta.xml
<CustomField>
    <fullName>IsDeletable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeletable</label>
    <type>Checkbox</type>
</CustomField>