force-app/main/default/objects/Notification__c/fields/Notification_Status__c.field-meta.xml
<CustomField>
    <fullName>Notification_Status__c</fullName>
    <label>Notification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>