force-app/main/default/objects/Notification__c/fields/Required_End__c.field-meta.xml
<CustomField>
    <fullName>Required_End__c</fullName>
    <label>Required End</label>
    <type>Date</type>
</CustomField>