force-app/main/default/objects/Notification__c/fields/Required_Start__c.field-meta.xml
<CustomField>
    <fullName>Required_Start__c</fullName>
    <label>Required Start</label>
    <type>Date</type>
</CustomField>