force-app/main/default/objects/Notification__c/fields/titleLabel__c.field-meta.xml
<CustomField>
    <fullName>titleLabel__c</fullName>
    <label>titleLabel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>